classDiagram
    direction LR

    class Controller {
        SelectDemand(Vehicle v, Demand d) Boolean
        SelectStation(Vehicle v, Station s) Boolean
        UnselectStation(Vehicle v) Boolean
        SelectSegment(Vehicle v) Segment
        SelectSpeed(Vehicle v) Double
        SelectMaximumSpeedSelectionTimeout(Vehicle v) Double
        SelectMaximumStationSelectionTimeout(Vehicle v) Double
    }
    class RandomController {

    }
    class GreedyController {

    }
    class SmartController {
        GetMinimumDistance(Location a, Location b) Double
        GetMinimumStationDistance(Location l) Double
    }
    class ManualController {

    }
    class JGraphT {
        
    }
    class Swing {
        
    }

    <<Library>> JGraphT
    <<Library>> Swing

    RandomController --|> Controller
    GreedyController --|> Controller
    SmartController --|> Controller
    ManualController --|> Controller
    
    SwitchableController --|> Controller
    SwitchableController --> "*" Controller:Controllers
    SwitchableController --> "1" Controller:Active

    JGraphT <-- SmartController
    Swing <-- ManualController